# cTwinPrimeNumberParallel

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml
buildMakeFile/: finderSequential  primeNumberFinderMPI  primeNumberFinderSequential  twinPrimeNumberFinderMPI  twinPrimeNumberFinderMpiV1  twinPrimeNumberFinderMpiV2  twinPrimeNumberFinderSequential
finderSeq/: CMakeLists.txt  commonFunctions.c  commonFunctions.h  main.c
primeNumberFinderMPI/: CMakeLists.txt  main.c  mainv2.c
primeNumberFinderMpi/: main.c
primeNumberFinderParallel/: CMakeLists.txt  main.c
primeNumberFinderSeq/: main.c
primeNumberFinderSequential/: main.c
speedTest/: multiComputerCompiler.sh  multiComputerTransferer.sh  results.csv  speedTest.sh  speedTestMonoComputer.sh  speedTestMutiComputers.sh
test/: CMakeLists.txt  finderSeqTest.c  primeNumberParallelTest.c  primeNumberSequentialTest.c
twinPrimeNumberFinder/: CMakeLists.txt  main.c
twinPrimeNumberFinderMPI/: main.c
twinPrimeNumberFinderMpiV1/: CMakeLists.txt  d3-1.c  main.c
twinPrimeNumberFinderMpiV2/: CMakeLists.txt  d3-2.c  main.c
twinPrimeNumberFinderSeq/: main.c
